[metadata]
name = bird2board
url = https://github.com/ihuston/bird2board
license = MIT
license_file = LICENSE
author = Ian Huston
author_email = ian@ianhuston.net
description = Convert bird based bookmarks to board based ones.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Topic :: Utilities

[options]
packages = bird2board
install_requires =
    requests~=2.25.1
    click~=8.0.1

[options.entry_points]
console_scripts =
    bird2board = bird2board.app:convert
